apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.${DOMAIN}
      secretName: wildcard-${DOMAIN_DASH}-tls
  rules:
    - host: argocd.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
